# genai-enterprise-labs

./: Capstone-POC.md  Infra.md  Jenkinsfile  README.md  ml-plan.md  plan.md  preset.md
d1/enterprise_ka/: .env.example  .envrc  README.md
d1/enterprise_ka/app/: main.py  schemas.py
d1/enterprise_ka/app/core/: config.py  logging.py  middleware.py
d1/enterprise_ka/app/llm/: anthropic_messages.py  base.py  openai_chat.py
d1/enterprise_ka/app/rag/: chunking.py  index.py  prompts.py  retriever.py
d1/enterprise_ka/data/: index.json
d1/enterprise_ka/scripts/: build_index.py
enterprise_ka/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
enterprise_ka/app/: main.py  schemas.py
enterprise_ka/app/core/: config.py  guardrails.py  middleware.py
enterprise_ka/app/llm/: anthropic_messages.py  base.py  openai_chat.py
enterprise_ka/app/rag/: chunking.py  index.py  prompts.py  retriever.py
enterprise_ka/data/docs/: hr_policy.txt  oncall_runbook.txt  security_policy.txt
enterprise_ka/scripts/: build_index.py
enterprise_ka/tests/: test_app.py
enterprise_ka_frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
enterprise_ka_frontend/app/: globals.css  layout.tsx  page.tsx
notes/: day-14.md
prompt/: 01-preset.md  02-process.md  15-days-plan.md  Capstone-POC.md  Daily-poc.md  d1.md  d2.md  drill-down.md  flow.md  jenkins-infra-ec2.md  poc-suggestion.md
prompt/poc/: platform.md  profile.md  tech-lead.md
